--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -63,7 +63,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50px;
-    background: #E4B717;
+    background-color: #E4B717 !important;
 }
 
 @media screen and (max-width: 1000px) {
