--- a/styles/profile.module.css
+++ b/styles/profile.module.css
@@ -176,9 +176,10 @@
 .order {
     background-color: #FFFFFF;
     width: 880px;
-    height: 512px;
+    height: 100%;
     border-radius: 20px;
     padding: 19px 27px;
+    padding-bottom: 20px;
 }
 
 .orderTitle {
@@ -189,8 +190,10 @@
 
 .cardOrder {
     width: 823px;
-    height: 260px;
-    margin-top: 19px;
+    height: 100%;
+    margin-top: 19px auto;
+    /* margin-bottom: 50px; */
+    position: relative;
     border-radius: 20px;
     background: #FAF8F8;
 }
@@ -227,15 +230,25 @@
     transition: .2s ease;
 }
 
+
 .orderNumber div button:active {
     transform: scale(0.9);
 }
 
 .cart {
     display: flex;
+    padding-top: 19.97px;
+    padding-bottom: 19.97px;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: rgba(136, 136, 136, 0.12);
 }
 
 .orderSection {
+    position: relative;
     justify-content: space-between;
     padding: 11px 25px;
     display: flex;
@@ -253,6 +266,12 @@
 
 .const {
     display: flex;
+    align-items: center;
+    gap: 1.7rem;
+}
+
+.constTag {
+    display: flex;
     gap: 8px;
     color: #363636;
     padding-top: 10px;
@@ -261,14 +280,15 @@
     line-height: 160%;
 }
 
-.const p:nth-child(2) {
+
+.constTag p:nth-child(2) {
     font-size: 16px;
     font-weight: 450;
     color: #8A8A8A;
 }
 
 .priceTitle {
-    padding-top: 35px;
+    padding-top: 10px;
     display: flex;
     gap: 7px;
     color: #363636;
@@ -283,6 +303,19 @@
     color: #8A8A8A;
 }
 
+.rightOrder {
+    justify-content: space-between;
+    align-items: flex-end;
+    display: block;
+}
+
+.button {
+    margin: auto;
+    justify-content: flex-end;
+    align-items: flex-end;
+    display: flex;
+}
+
 .rightOrder button {
     width: 238px;
     height: 50px;
@@ -291,7 +324,6 @@
     border-radius: 50px;
     border: 1px solid #E4B717;
     box-shadow: 0px 1px 17px 0px rgba(228, 183, 23, 0.25);
-    margin-top: 74px;
     color: #E4B717;
     font-size: 17px;
     font-weight: 700;
@@ -592,6 +624,93 @@
         transition: .2s ease;
         font-weight: 700;
         font-size: 13px;
+    }
+
+}
+
+
+@media screen and (max-width:1200px) {
+    .order {
+        width: 100%;
+    }
+
+    .cardOrder {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width:1040px) {
+    .orderSection {
+        display: block;
+    }
+
+    .rightOrder {
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+
+    .rightOrder button {
+        justify-content: center;
+        display: flex;
+        text-align: center;
+        margin: auto;
+        padding-top: 10px;
+    }
+
+    .total {
+        text-align: center;
+        padding: 20px 0;
+    }
+
+}
+
+@media screen and (max-width:900px) {
+    .orderNumber {
+        display: block;
+    }
+}
+
+
+@media screen and (max-width: 835px) {
+    .orderNumber div {
+        justify-content: center;
+        text-align: center;
+        margin: auto;
+        display: block;
+        padding-left: 0%;
+    }
+}
+
+@media screen and (max-width: 797px) {
+    .const {
+        display: block;
+    }
+    .cart {
+        align-items: center;
+    }
+
+}
+
+
+@media screen and (max-width: 750px) {
+    .const {
+        display: flex;
+    }
+    .cart {
+        align-items: normal;
+    }
+
+}
+
+
+@media screen and (max-width: 495px) {
+    .const {
+        display: block;
+    }
+    .cart {
+        align-items: center;
     }
 
 }
