--- a/styles/selectCategory.module.css
+++ b/styles/selectCategory.module.css
@@ -4,7 +4,7 @@
     display: flex;
     top: 175px;
     width: 1180px;
-    height: 193px;
+    height: 100%;
     background-color: #ffffff;
     border-radius: 20px;
     box-shadow: 0px 5px 20px 10px rgba(214, 214, 214, 0.19);
@@ -32,6 +32,11 @@
     border-right: 1px solid #cacaca;
     width: 200px;
     padding: 5px;
+    flex-direction: column;
+}
+
+.categorSection {
+    flex-direction: column;
 }
 
 .categorLeft  div {
@@ -48,7 +53,7 @@
     padding: 10px 12px;
     border: none;
     background: none;
-}
+} 
 
 .categorLeft div:hover {
     cursor: pointer;
@@ -58,14 +63,11 @@
     width: 100%;
 }
 
-.categorSection {
-    display: flex;
-}
-
 .categorRight {
     justify-content: center;
     height: 10px;
     align-items: center;
+    flex-direction: row;
     padding: 10px;
 }
 
