--- a/styles/categories.module.css
+++ b/styles/categories.module.css
@@ -56,7 +56,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 40px;
+  gap: 2rem;
 }
 
 .selectList h3 {
@@ -86,13 +86,9 @@
   transition: 0.4s;
 }
 
-.selectItem > h3 {
-  transition: 0.4s;
-
-}
-
-.selectItem > h3:hover {
+.selectItem:hover {
   color: #e4b717;
+  transition: 0.4s;
 }
 
 
