--- a/styles/detail.module.css
+++ b/styles/detail.module.css
@@ -42,6 +42,7 @@
   background: #fff;
   border-radius: 20px;
   width: 100%;
+  padding: 1.5rem;
   height: 100%;
 }
 
@@ -56,6 +57,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  gap: .5rem;
 }
 
 .imageToSelect {
