--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/futura-pt');
 
 
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,6 +12,7 @@
 body, html, #__next {
   background: #FAF8F8;
   height: fit-content;
+  --form-control-color: #E4B71;
   accent-color: #E4B717;
 }
 
