pushed to merge

--- a/styles/chat.module.css
+++ b/styles/chat.module.css
@@ -38,6 +38,7 @@
 .top {
   background: #fff;
   padding: 23px;
+  z-index: 1000;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -54,11 +55,10 @@
 }
 
 .mainChat {
-  display: flex;
   padding: 10px;
-  justify-content: flex-end;
   height: 87%;
-  flex-direction: column;
+  max-height: 86%;
+  overflow-y: scroll;
 }
 
 .message,
