--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,37 @@
   margin-top: 2rem;
 }
 
+.categoriesSlide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.categoryItem {
+  display: flex !important;
+  justify-content: space-evenly !important;
+  align-items: center !important;
+  flex-direction: column;
+  height: 195px;
+  width: 100%;
+  background: #fff;
+  border-radius: 15px;
+  color: #4D4D4D;
+}
+.categoryItem> h3 {
+  font-size: 17px !important;
+}
+
+.categoryItem > .categoriesTop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 110px;
+  width: 110px;
+  border-radius: 1000px;
+  border: 1px solid #4D4D4D;
+}
+
 .addLeft {
   display: flex;
   justify-content: space-between;
@@ -120,11 +151,6 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
-.swiperL>div {
-  display: flex;
-  gap: 2.7% !important;
 }
 
 .catControl:last-child {
