--- a/styles/head.module.css
+++ b/styles/head.module.css
@@ -166,7 +166,7 @@
 }
 
 @media screen and (max-width: 768px) {
-  .contraLeft {
+  .contraLeft .select {
     display: none;
   }
   .contraRight {
