--- a/styles/profileBurger.module.css
+++ b/styles/profileBurger.module.css
@@ -28,6 +28,8 @@
 
 .profileUser:hover {
     cursor: pointer;
+    background-color: #E4B717;
+    color: #FFFFFF;
 }
 
 .profileOrder {
@@ -47,6 +49,8 @@
 
 .profileOrder:hover {
     cursor: pointer;
+    background-color: #E4B717;
+    color: #FFFFFF;
 }
 
 .profileClose {
