--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -5,47 +5,26 @@
     width: 23.725%;
     height: 331px;
     border-radius: 20px;
-    justify-content: center;
+    justify-content: space-between;
     gap: 2px;
     position: relative;
     padding: 10px 20px;
     cursor: pointer;
 }
 
-.imageOfCard > img {
-    width: auto;
-    border-radius: 12px;
-    height: 160px;
-}
-.somevalues {
-    width: 100%;
-}
-.card > a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    gap: 1rem;
-    width: 100%;
-    height: 100%;
-}
-
-.imageOfCard > h3, .imageOfCard > p {
-    text-align: left;
-}
-
-.card * {
-    text-align: left !important;
-}
 
 .like {
     position: absolute;
     top: 5%;
     left: 77%;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 1px solid #179AE4;
 }
 
 .card > img {
@@ -80,7 +59,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50px;
-    background-color: #E4B717 !important;
+    background: #E4B717;
 }
 
 @media screen and (max-width: 1000px) {
