--- a/styles/cardBurger.module.css
+++ b/styles/cardBurger.module.css
@@ -31,6 +31,7 @@
     margin-top: 19px;
     padding: 15px;
     width: 227px;
+    height: 169px;
     background: #FFFFFF;
     border-radius: 20px;
 
@@ -65,6 +66,7 @@
     margin-top: 19px;
     padding: 15px;
     width: 227px;
+    height: 124px;
     background: #FFFFFF;
     border-radius: 20px;
 }
