--- a/styles/categories.module.css
+++ b/styles/categories.module.css
@@ -12,7 +12,7 @@
   width: 1180px;
   padding: 12px 0;
   display: flex;
-  gap: 1rem;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -28,35 +28,15 @@
   user-select: none;
 }
 
-.close {
-  background-color: #e4b717;
-  display: flex;
-  justify-content: space-between;
-  border: none;
-  padding: 8px 20px;
-  border-radius: 50px;
-  align-items: center;
-  gap: 10px;
-  cursor: pointer;
-  user-select: none;
-  transition: .20s ease-in-out;
-}
-
-.close > h3 {
-  color: #fff;
-  font-size: 18px;
-}
-
 .categ>h3 {
   font-size: 18px;
-  color: #E4B717;
 }
 
 .selectList {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 2rem;
+  gap: 40px;
 }
 
 .selectList h3 {
@@ -86,9 +66,13 @@
   transition: 0.4s;
 }
 
-.selectItem:hover {
-  color: #e4b717;
+.selectItem > h3 {
   transition: 0.4s;
+
+}
+
+.selectItem > h3:hover {
+  color: #e4b717;
 }
 
 
