--- a/styles/category.module.css
+++ b/styles/category.module.css
@@ -48,7 +48,6 @@
     margin-top: 5px;
 }
 
-
 .radioInput label {
     padding-left: 13px;
     font-weight: 450;
@@ -68,6 +67,7 @@
     margin-top: 19px;
     padding: 15px;
     width: 227px;
+    height: 124px;
     background: #FFFFFF;
     border-radius: 20px;
 }
@@ -75,11 +75,6 @@
 .operativeTitle {
     font-size: 18px;
     font-weight: 700;
-}
-
-.checkBoxInput, .radioInput {
-    display: flex;
-    align-items: center;
 }
 
 .checkBoxInput label {
@@ -103,9 +98,10 @@
     flex-wrap: wrap;
 }
 
-.sectionRight>div {
-    width: 32%;
+.sectionRight>a {
+    width: 24%;
 }
+
 
 .carusel {
     align-items: center;
@@ -154,6 +150,7 @@
         margin-top: 19px;
         padding: 15px;
         width: 220px;
+        height: 169px;
         background: #FFFFFF;
         border-radius: 20px;
 
@@ -179,6 +176,7 @@
         margin-top: 19px;
         padding: 15px;
         width: 220px;
+        height: 124px;
         background: #FFFFFF;
         border-radius: 20px;
     }
