--- a/styles/company.module.css
+++ b/styles/company.module.css
@@ -6,7 +6,8 @@
 }
 
 .companyTitle {
-    width: 100%;
+    width: 1177px;
+    height: 199px;
     background: #FFFFFF;
     border-radius: 20px;
     padding: 19px 28px;
@@ -37,7 +38,7 @@
     color: #8A8A8A;
 }
 
-.companyProfile a {
+.companyProfile button {
     padding: 10px 47px;
     background: #E4B717;
     box-shadow: 0px 1px 17px rgba(228, 183, 23, 0.25);
@@ -84,7 +85,7 @@
     cursor: pointer;
 }
 
-.navigation a {
+.navigation button {
     padding: 10px 20px;
     border: 1px solid #E4B717;
     filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
@@ -96,7 +97,7 @@
 }
 
 .companyCards {
-    margin-top: 1.5rem;
+    margin-top: 29px;
 }
 
 .companyCards h2 {
@@ -229,7 +230,7 @@
         font-size: 13px;
     }
 
-    .companyProfile a {
+    .companyProfile button {
         padding: 8px 35px;
         background: #E4B717;
         box-shadow: 0px 1px 17px rgba(228, 183, 23, 0.25);
@@ -313,7 +314,7 @@
         font-size: 12px;
     }
 
-    .companyProfile a {
+    .companyProfile button {
         padding: 8px 35px;
         background: #E4B717;
         box-shadow: 0px 1px 17px rgba(228, 183, 23, 0.25);
