--- a/styles/detail.module.css
+++ b/styles/detail.module.css
@@ -42,7 +42,6 @@
   background: #fff;
   border-radius: 20px;
   width: 100%;
-  padding: 1.5rem;
   height: 100%;
 }
 
@@ -57,7 +56,6 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  gap: .5rem;
 }
 
 .imageToSelect {
@@ -91,8 +89,7 @@
 
 .selectMemory {
   display: flex;
-  margin-top: 1rem;
-  gap: 0.5rem;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -213,7 +210,6 @@
 .video {
   width: 100%;
   margin-top: 2rem;
-  height: auto;
 }
 
 .hole {
@@ -224,11 +220,6 @@
   width: 100%;
   background: #000;
   border-radius: 30px;
-}
-
-.hole > video {
-  height: 450px;
-  width: auto;
 }
 
 .selectDetail {
@@ -321,11 +312,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
-}
-
-.imageToSelect > img {
-  width: 70px;
-  height: auto;
 }
 
 @media screen and (max-width: 1260px) {
