--- a/styles/selectCategory.module.css
+++ b/styles/selectCategory.module.css
@@ -2,18 +2,14 @@
     padding: 10px 5px;
     position: absolute;
     display: flex;
-    top: 175px;
+    top: 180px;
     width: 1180px;
+    height: 193px;
     background-color: #ffffff;
     border-radius: 20px;
     box-shadow: 0px 5px 20px 10px rgba(214, 214, 214, 0.19);
     z-index: 999;
     transition: .4s;
-}
-
-.iconOfCat>img {
-    width: 21px;
-    height: auto;
 }
 
 .dn {
@@ -29,19 +25,14 @@
     font-size: 18px;
     font-weight: 700;
     border-right: 1px solid #cacaca;
-    padding: 5px;
+    width: 200px;
 }
 
 .categorLeft  div {
-    width: 100%;
     padding-left: 5px;
     display: flex;
     align-items: center;
     transition: .4s;
-}
-
-.categorRight {
-    margin-left: 1rem;
 }
 
 .categorLeft h1{
@@ -57,12 +48,16 @@
     color: #FFFFFF;
     background-color: #E4B717;
     border-radius: 15px;
-    width: 100%;
-    transition: 0.2s linear;
 }
 
 .categorSection {
     display: flex;
+}
+
+.categorRight {
+    justify-content: center;
+    height: 10px;
+    align-items: center;
 }
 
 .table {
@@ -77,8 +72,7 @@
     padding-top: 10px;
 }
 
-
-.table ul li a{
+.table ul li a {
     color: #666565;
     font-weight: 700;
 }
@@ -86,7 +80,6 @@
 @media screen and (max-width:1200px) {
     .selectCategory {
         width: 100%;
-        margin-left: -1%;
     }
 }
 
@@ -97,13 +90,59 @@
 }
 
 @media screen and (max-width:768px) {
+    .selectCategory {
+        width: 97%;
+    }
 
     .table {
         gap: 100px;
     }
 }
 
-@media  screen and (max-width: 700px) {
+
+@media screen and (max-width:590px) {
+    .selectCategory {
+        width: 96%;
+    }
+
+    .table {
+        gap: 50px;
+    }
+}
+
+@media screen and (max-width:570px) {
+    .table {
+        gap: 30px;
+    }
+}
+
+@media screen and (max-width:480px) {
+    .selectCategory {
+        height: 185px;
+        width: 96%;
+    }
+
+    .table {
+        gap: 20px;
+        font-size: 13px;
+    }
+
+    .categorLeft h1{
+        font-size: 15px;
+        font-weight: 600;
+        padding: 10px 12px;
+        border: none;
+        background: none;
+    }
+    
+}
+
+@media screen and (max-width:380px) {
+    .selectCategory {
+        height: 180px;
+        width: 60%;
+    }
+
     .table {
         display: none;
     }
@@ -111,4 +150,11 @@
     .categorLeft h1{
         font-size: 15px;
     }
+
+
+    .categorLeft {
+        border: none;
+    }
+
+
 }
