--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,37 @@
   margin-top: 2rem;
 }
 
+.categoriesSlide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.categoryItem {
+  display: flex !important;
+  justify-content: space-evenly !important;
+  align-items: center !important;
+  flex-direction: column;
+  height: 195px;
+  width: 100%;
+  background: #fff;
+  border-radius: 15px;
+  color: #4D4D4D;
+}
+.categoryItem> h3 {
+  font-size: 17px !important;
+}
+
+.categoryItem > .categoriesTop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 110px;
+  width: 110px;
+  border-radius: 1000px;
+  border: 1px solid #4D4D4D;
+}
+
 .addLeft {
   display: flex;
   justify-content: space-between;
@@ -39,10 +70,10 @@
   color: #fff;
 }
 
-.addLeft > img {
+.addLeft>img {
   position: relative;
-  height: 100%;
-  width: auto;
+  height: auto;
+  width: 60%;
 }
 
 .cart {
@@ -61,7 +92,7 @@
   background: transparent !important;
 }
 
-.cart > h3 {
+.cart>h3 {
   background: transparent !important;
 }
 
@@ -99,7 +130,7 @@
   background: transparent !important;
 }
 
-.cat > h4 {
+.cat>h4 {
   color: #8a8a8a;
 }
 
@@ -122,14 +153,10 @@
   cursor: pointer;
 }
 
-.swiperL > div {
-  display: flex;
-  gap: 2.7% !important;
-}
-
 .catControl:last-child {
   border: 1px solid #e4b717;
 }
+
 .newProducts {
   display: flex;
   flex-direction: column;
@@ -137,16 +164,16 @@
   margin-top: 2rem;
 }
 
-.newProducts > h3 {
+.newProducts>h3 {
   font-size: 23px;
 }
 
 .carusel__card > a > img {
-  width: 95px;
+  width: 95px !important;
   height: auto;
 }
 
-.carusel__card > a > div {
+.carusel__card>a>div {
   margin-top: 0;
 }
 
@@ -197,37 +224,6 @@
   line-height: 160%;
 }
 
-.navigation {
-  width: 1180px;
-  display: flex;
-  align-items: center;
-  height: 65px;
-  background-color: #ffffff;
-  gap: 49px;
-  box-shadow: 0px 1px 10px 1px rgba(214, 214, 214, 0.19);
-  border-radius: 25px;
-  justify-content: center;
-  margin-top: 31px;
-}
-
-.nav {
-  border-bottom: 3px solid #ffffff;
-  height: 65px;
-  font-weight: 700;
-  padding-top: 15px;
-  cursor: pointer;
-}
-
-.navigation button {
-  padding: 10px 20px;
-  border: 1px solid #e4b717;
-  filter: drop-shadow(0px 1px 17px rgba(228, 183, 23, 0.25));
-  border-radius: 50px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 160%;
-  color: #e4b717;
-}
 
 .cards {
   padding: 19px 31px;
@@ -307,38 +303,50 @@
   transform: scale(0.9);
 }
 
+
 .carusel__card {
   position: relative;
   padding: 22px 12px;
   display: flex;
   align-items: center;
+  height: auto;
   gap: 20px;
 }
 
-.carusel__card a {
-  width: 195.1px;
-  height: 228.49px;
+.carusel__card div {
+  width: 195px;
+  height: auto;
   background: #faf8f8;
   border-radius: 20px;
-  padding: 10px 15px;
+  box-sizing: border-box;
+  padding: 10px 20px;
 }
 
 .carusel__card a h3 {
   font-size: 17px;
+  padding-left: 0px;
 }
 
 .carusel__card a h4 {
   font-size: 14px;
 }
 
-.carusel__card a div:nth-child(2) {
-  width: 37.81px;
-  height: 38.7px;
+.carusel__card div div:nth-child(2) {
+  width: 42px;
+  height: auto;
 }
 
-.carusel__card a div:last-child > img {
-  width: 17px;
-  height: 17px;
+.carusel__card div div:nth-child(3) {
+  width: 190px;
+  margin-left: -90px;
+  gap: 30px;
+  height: 36px;
+}
+
+
+.carusel__card a img:first-child{
+  width: 70px;
+  height: auto;
 }
 
 .controllerProduct {
@@ -441,7 +449,7 @@
   color: #363636;
 }
 
-.carusel__card > a:nth-child(1) {
+.carusel__card>a:nth-child(1) {
   display: none;
 }
 
@@ -454,27 +462,26 @@
 }
 
 
-
-
 @media screen and (max-width: 1200px) {
   .container {
     width: 100%;
     padding-left: 1%;
     padding-right: 1%;
   }
+
   .cats {
     overflow: scroll;
   }
+
   .news {
     padding: 10px;
     border-radius: 10px;
   }
-  .navigation {
-    display: none;
-  }
+
   .cards {
     width: 100%;
   }
+
   .carusel {
     width: auto;
   }
@@ -486,16 +493,20 @@
     height: fit-content;
     padding: 10px;
   }
-  .carusel__card > a:nth-child(1) {
+
+  .carusel__card>div:nth-child(1) {
     display: flex;
   }
-  .carusel__card > a {
+
+  .carusel__card>div {
     width: 24%;
   }
+
   .description p:nth-child(2) {
     width: auto;
     margin-bottom: 1rem;
   }
+
   .cards__button {
     width: auto;
     align-items: flex-end;
@@ -503,96 +514,112 @@
     margin-left: 0;
     justify-content: flex-end;
   }
-  .cards__button > button {
+
+  .cards__button>button {
     padding: 10px 20px !important;
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 950px) {
-  .carusel__card > a {
+  .carusel__card>div {
     width: 32%;
   }
-  .carusel__card > a:nth-child(1) {
+
+  .carusel__card>div:nth-child(1) {
     display: none;
   }
-  .carusel__card > a {
+
+  .carusel__card>div {
     padding: 10px;
   }
 }
 
 @media screen and (max-width: 680px) {
-  .carusel__card > a:nth-child(2) {
+  .carusel__card>div:nth-child(2) {
     display: none;
   }
-  .carusel__card > a {
-    width: 49.1%;
+
+  .carusel__card>div {
+    width: 100% !important;
   }
+
   .cat {
     width: 32.7% !important;
   }
 }
 
 @media screen and (max-width: 460px) {
-  .carusel__card > a:nth-child(3) {
+  .carusel__card>div:nth-child(3) {
     display: none;
   }
-  .carusel__card > a {
-    width: 100%;
-  }
-  .cards__button{
+
+
+  .cards__button {
     flex-direction: column;
   }
-  .cards__button > button:last-child {
+
+  .cards__button>button:last-child {
     margin-left: 0;
   }
+
   .card__title {
     flex-direction: column;
     text-align: center;
   }
+
   .cat {
     width: 52% !important;
   }
 }
 
 @media screen and (max-width: 768px) {
-    .addLeft > img {
-      height: 250px;
-      width: auto;
-    }
-    .addLeft {
-      height: 300px;
-    }
-    .newsWrapper {
-      display: flex;
-      flex-direction: column;
-      row-gap: 1rem;
-    }
-    .news {
-      width: 100%;
-    }
-    .addLeft > h1 {
-      position: absolute;
-      top: 2%;
-      left: 3%;
-      z-index: 100000;
-    }
-    .addLeft {
-      border-radius: 20px;
-    }
-    .addLeft > img {
-      left: 25%;
-    }
-    .add {
-      margin-bottom: 0;
-      height: auto;
-    }
-    .catTop {
-      width: 90px;
-      height: 90px;
-    }
-    .catTop > img {
-      width: 30px;
-      height: auto;
-    }
+  .addLeft>img {
+    height: 250px;
+    width: auto;
+  }
+
+  .addLeft {
+    height: 300px;
+  }
+
+  .newsWrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+
+  .news {
+    width: 100%;
+  }
+
+  .addLeft>h1 {
+    position: absolute;
+    top: 2%;
+    left: 3%;
+    z-index: 100000;
+  }
+
+  .addLeft {
+    border-radius: 20px;
+  }
+
+  .addLeft>img {
+    left: 25%;
+  }
+
+  .add {
+    margin-bottom: 0;
+    height: auto;
+  }
+
+  .catTop {
+    width: 90px;
+    height: 90px;
+  }
+
+  .catTop>img {
+    width: 30px;
+    height: auto;
+  }
 }
