--- a/styles/cart.module.css
+++ b/styles/cart.module.css
@@ -103,7 +103,6 @@
 .allPrice {
     margin-top: 7px;
     width: 292px;
-    height: 271px;
     background: #FFFFFF;
     border-radius: 20px;
     padding: 17px 28px;
@@ -338,6 +337,62 @@
 
 }
 
+@media screen and (max-width:497px) {
+    .cart {
+        width: 100%;
+    }
+
+
+
+    .DeliverySection h1 {
+        font-size: 16px;
+    }
+
+    .countPrice h1 {
+        font-size: 12px;
+    }
+
+    .countButton {
+        margin-top: -40px;
+        position: absolute;
+        font-size: 14px;
+    }
+
+    .countButton {
+        width: 75px;
+        height: 30px;
+    }
+
+    .menu label {
+        font-weight: 450;
+        font-size: 9px;
+        color: #B7AFAF;
+    }
+
+    .menu h1 {
+        color: #363636;
+        font-weight: 700;
+        font-size: 15px;
+    }
+
+    .menu p {
+        font-weight: 450;
+        font-size: 9px;
+        color: #363636;
+    }
+
+    .allPrice {
+        margin-left: 6.5%;
+        display: block;
+    }
+
+    .input {
+        width: 20px;
+        height: 20px;
+    }
+
+}
+
 @media screen and (max-width:480px) {
     .cart {
         width: 100%;
@@ -418,6 +473,60 @@
     .allPrice {
         align-items: center;
         justify-content: center;
+    }
+
+}
+
+@media screen and (max-width:403px) {
+    .cart {
+        width: 100%;
+    }
+
+    .DeliverySection h1 {
+        font-size: 16px;
+    }
+
+    .countPrice h1 {
+        font-size: 12px;
+    }
+
+    .countButton {
+        margin-top: -40px;
+        position: absolute;
+        font-size: 14px;
+    }
+
+    .countButton {
+        width: 75px;
+        height: 30px;
+    }
+
+    .menu label {
+        font-weight: 450;
+        font-size: 9px;
+        color: #B7AFAF;
+    }
+
+    .menu h1 {
+        color: #363636;
+        font-weight: 700;
+        font-size: 15px;
+    }
+
+    .menu p {
+        font-weight: 450;
+        font-size: 9px;
+        color: #363636;
+    }
+
+    .allPrice {
+        margin-left: 6.5%;
+        display: block;
+    }
+
+    .input {
+        width: 20px;
+        height: 20px;
     }
 
 }
