--- a/styles/category.module.css
+++ b/styles/category.module.css
@@ -33,7 +33,7 @@
     margin-top: 19px;
     padding: 15px;
     width: 227px;
-    height: 169px;
+    height: auto;
     background: #FFFFFF;
     border-radius: 20px;
 
@@ -47,6 +47,7 @@
 .radioInput {
     margin-top: 5px;
 }
+
 
 .radioInput label {
     padding-left: 13px;
@@ -67,7 +68,6 @@
     margin-top: 19px;
     padding: 15px;
     width: 227px;
-    height: 124px;
     background: #FFFFFF;
     border-radius: 20px;
 }
@@ -75,6 +75,11 @@
 .operativeTitle {
     font-size: 18px;
     font-weight: 700;
+}
+
+.checkBoxInput, .radioInput {
+    display: flex;
+    align-items: center;
 }
 
 .checkBoxInput label {
@@ -98,12 +103,12 @@
     flex-wrap: wrap;
 }
 
-.sectionRight>a {
-    width: 24%;
+.sectionRight>div {
+    width: 32%;
 }
 
-
 .carusel {
+    cursor: pointer;
     align-items: center;
     gap: 15px;
     justify-content: center;
@@ -118,6 +123,15 @@
     display: none;
 }
 
+.apply {
+    width: 227px;
+    height: 40px;
+    background-color: #E4B717;
+    color: #FFFFFF;
+    margin-top: 20px;
+    border-radius: 15px;
+    font-size: 18px;
+}
 
 @media screen and (max-width:1180px) {
     .phone {
@@ -150,7 +164,6 @@
         margin-top: 19px;
         padding: 15px;
         width: 220px;
-        height: 169px;
         background: #FFFFFF;
         border-radius: 20px;
 
@@ -176,7 +189,6 @@
         margin-top: 19px;
         padding: 15px;
         width: 220px;
-        height: 124px;
         background: #FFFFFF;
         border-radius: 20px;
     }
@@ -251,10 +263,6 @@
         width: 100%;
     }
 
-    .sectionRight a {
-        width: 32%;
-    }
-
     .sectionRight {
         gap: 2%;
         row-gap: 1rem;
@@ -287,7 +295,7 @@
         height: 124px;
     }
 
-    .sectionRight>a {
+    .sectionRight>div {
         width: 30%;
     }
 
@@ -366,7 +374,7 @@
         height: 124px;
     }
 
-    .sectionRight>a {
+    .sectionRight>div {
         width: 32.60%;
     }
 
@@ -438,7 +446,7 @@
         align-items: center;
     }
 
-    .sectionRight>a {
+    .sectionRight>div {
         width: 49%;
     }
 
@@ -488,7 +496,7 @@
         align-items: center;
     }
 
-    .sectionRight>a {
+    .sectionRight>div {
         width: 100%;
     }
 
