--- a/styles/detail.module.css
+++ b/styles/detail.module.css
@@ -42,6 +42,7 @@
   background: #fff;
   border-radius: 20px;
   width: 100%;
+  padding: 1.5rem;
   height: 100%;
 }
 
@@ -56,6 +57,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  gap: .5rem;
 }
 
 .imageToSelect {
@@ -89,7 +91,8 @@
 
 .selectMemory {
   display: flex;
-  justify-content: space-between;
+  margin-top: 1rem;
+  gap: 0.5rem;
   align-items: center;
 }
 
@@ -210,6 +213,7 @@
 .video {
   width: 100%;
   margin-top: 2rem;
+  height: auto;
 }
 
 .hole {
@@ -220,6 +224,11 @@
   width: 100%;
   background: #000;
   border-radius: 30px;
+}
+
+.hole > video {
+  height: 450px;
+  width: auto;
 }
 
 .selectDetail {
@@ -312,6 +321,11 @@
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
+}
+
+.imageToSelect > img {
+  width: 70px;
+  height: auto;
 }
 
 @media screen and (max-width: 1260px) {
