--- a/styles/liked.module.css
+++ b/styles/liked.module.css
@@ -8,18 +8,10 @@
 }
 
 .Favorites {
+    width: 1180px;
     display: flex;
     padding: 10px 0;
     margin: auto;
-}
-
-.likedCards {
-    width: 100%;
-    flex-wrap: wrap;
-    gap: 20px;
-    display: flex;
-    width: 100%;
-    flex-wrap: wrap;
 }
 
 .Card {
@@ -64,39 +56,35 @@
     border: none;
 }
 
+.newProductsWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.7%;
+    row-gap: 1rem;
+    width: 100%;
+  }
+  
+
 @media screen and (max-width:1180px) {
     .likedSection {
         padding: 10px 10px;
         width: 100%;
     }
-    .Card {
-        width:  30%;
-    }
 
     .Favorites {
+        width: 100%;
         padding: 10px 10px;
     }
 }
+
 @media screen and (max-width:768px) {
     .likedSection {
-        padding: 10px 10px;
         width: 100%;
     }
-    .Card {
-        width: 42%;
-    }
+
 
     .Favorites {
-        padding: 10px 10px;
+        width: 100%;
     }
 }
 
-@media screen and (max-width:480px) {
-    .likedSection {
-        width: 100%;
-    }
-
-    .Card {
-        width: 100%;
-    }
-} 
